--- a/3-1.md
+++ b/3-1.md
@@ -1,3 +1,10 @@
+### 3.1.2
+2017/08/22
+#### :sparkles: New
+- 西醫師實習醫學生80項技能訓練上線
+#### :construction: Bug Fix
+- 修復評量題號排序異常
+
 ### 3.1.1
 2017/07/25
 #### :construction: Bug Fix
