--- a/3-1.md
+++ b/3-1.md
@@ -1,3 +1,9 @@
+### 3.1.4
+2017/09/13
+##### :memo: Memo
+- 修改學員評核資料上傳功能，前次上傳的資料將會備份在系統中
+- 開放特定評核表供PGY訓練學員選擇評核臨床教師
+
 ### 3.1.3
 2017/08/30
 #### :construction: Bug Fix
