--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,10 @@
+### 3.2.1
+2017/12/05
+#### :sparkles: New
+- 新增牙科PGY訓練共通性選填訓練功能
+##### :memo: Memo
+- 部分管理者功能移至標準檔查詢與維護功能區
+
 ### 3.2.0
 2017/11/28
 #### :sparkles: New
