--- a/3-2.md
+++ b/3-2.md
@@ -1,7 +1,19 @@
+### 3.2.2
+2017/12/26
+#### :sparkles: New
+- 新增護理訓練學員排程上檔功能
+- 新增訓練職類切換功能，並與院區切換功能合併，若同時具有多項職類訓練操作權限的人員可在不登出的情況下直接切換至其他職類訓練
+#### :construction: Bug Fix
+- 修復80項技能訓練管理者權限管理功能異常
+- 修復單電子護照單選題未填答沒有正確提示異常
+- 修復評量存檔時間記錄異常
+##### :memo: Memo
+- 配合護理人員訓練需求調整教師設定功能
+
 ### 3.2.1
 2017/12/05
 #### :sparkles: New
-- 新增牙科PGY訓練共通性選填訓練功能
+- 新增藥師訓練學員排程上檔功能
 ##### :memo: Memo
 - 部分管理者功能移至標準檔查詢與維護功能區
 
