--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,10 @@
+### 3.2.3
+2018/01/18
+#### :construction: Bug Fix
+- 修復80項技能訓練新增管理者功能異常
+##### :memo: Memo
+- 80項技能訓練首頁新增技能清單下載
+
 ### 3.2.2
 2017/12/26
 #### :sparkles: New
