--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,13 @@
+### 3.2.4
+2018/03/09
+#### :sparkles: New
+- 新增80項技能訓練學員進度匯出功能
+#### :construction: Bug Fix
+- 修復放射職類訓練管理者登入問題
+- 修復醫事檢驗師訓練學員訓練排程順序異常
+##### :memo: Memo
+- 藥師訓練學員排程上檔功能新增排程學年度選項
+
 ### 3.2.3
 2018/01/18
 #### :construction: Bug Fix
