--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,9 @@
+### 3.2.5
+2018/03/12
+#### :sparkles: New
+- 新增80項技能訓練評估等級說明查詢功能
+- 新增80巷技能訓練技能定義查詢功能
+
 ### 3.2.4
 2018/03/09
 #### :sparkles: New
