--- a/3-2.md
+++ b/3-2.md
@@ -1,6 +1,11 @@
+### 3.2.8
+2018/05/16
+#### :sparkles: New
+- 新增藥師訓練共同訓練課程功能
+
 ### 3.2.7
 2018/05/07
-##### :memo: Memo
+#### :sparkles: New
 - 新增新制實習醫學生訓練入口及相關頁面
 
 ### 3.2.6
