--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,10 @@
+### 3.2.9
+2018/07/11
+#### :sparkles: New
+- 新增護理師訓練離職學員名單下載功能
+#### :construction: Bug Fix
+- 修復80項技能項次排序
+
 ### 3.2.8
 2018/05/16
 #### :sparkles: New
