--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,11 @@
+### 3.2.10
+2018/10/02
+#### :construction: Bug Fix
+- 修復牙科佐證資料排序
+- 修復課程代碼查詢排序
+##### :memo: Memo
+- 調整選填評量版面
+
 ### 3.2.9
 2018/07/11
 #### :sparkles: New
