--- a/3-2.md
+++ b/3-2.md
@@ -1,3 +1,10 @@
+### 3.2.11
+2018/10/29
+#### :sparkles: New
+- 新增護理師訓練行政權限管理者可依單位部門代號查詢轄下受訓學員訓練進度
+- 新增護理師訓練自動建立護理督導及護理長管理者權限功能
+- 護理督導及護理長登入護理師訓練後，可查詢其轄下受訓學員之訓練進度
+
 ### 3.2.10
 2018/10/02
 #### :construction: Bug Fix
