--- a/3-3.md
+++ b/3-3.md
@@ -1,2 +1,11 @@
 ### 3.3.1
 2019/01/17
+#### :sparkles: New
+- 新增實習醫學生訓練下載未完成評核名單功能
+
+### 3.3.0
+2018/11/28
+#### :sparkles: New
+- 新增PGY訓練下載未完成評核名單功能
+##### :memo: Memo
+- 各職類訓練進度查詢頁面增加排序功能
