--- a/3-3.md
+++ b/3-3.md
@@ -1,3 +1,10 @@
+### 3.3.2
+2019/01/21
+#### :construction: Bug Fix
+- 修復一般評量題目排序
+##### :memo: Memo
+- 重新製作護理訓練學員上檔功能
+
 ### 3.3.1
 2019/01/17
 #### :sparkles: New
