--- a/3-3.md
+++ b/3-3.md
@@ -1,3 +1,9 @@
+### 3.3.5
+2019/03/20
+##### :memo: Memo
+- 西醫師教師查詢指導學員評核列表功能學員重新添加訓練月份
+- 護理訓練已完訓或離職學員名單增加學員訓練起訖月份
+
 ### 3.3.4
 2019/03/05
 #### :sparkles: New
