--- a/3-3.md
+++ b/3-3.md
@@ -1,4 +1,11 @@
 ### 3.3.7
+2019/06/16
+#### :construction: Bug Fix
+- 修復牙科PGY訓練佐證資料教師進度顯示異常
+##### :memo: Memo
+- 醫事職類排程新增院區顯示
+
+### 3.3.7
 2019/06/06
 ##### :memo: Memo
 - 西醫師PGY訓練相容舊制PGY與新制PGY1、PGY2訓練
